# tinyserv

./: .dockerignore  Dockerfile
serv/: Cargo.toml
serv/src/: main.rs
