[package]
name = "serv"
version = "0.1.0"
authors = ["Paul Collier <paul@paulcollier.ca>"]
edition = "2018"

[[bin]]
name = "serv"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[profile.release]
opt-level = 'z' # optimize for size
lto = true
codegen-units = 1
